--- a/pgp_expiry/pgp_expiry.cfg
+++ b/pgp_expiry/pgp_expiry.cfg
@@ -1,5 +1,5 @@
 [expiry]
-keys_to_check = "/opt/site24x7/monagent/plugins/pgp_expiry/input.checks"
+keys_to_check = "B2E1062C8683440B,23BD06A606281990,B2E1062C86834232,"
 key_server = "keyserver.ubuntu.com"
 gpg_location = "/home/local/.gnupg"
 plugin_version = 1
