--- a/nfs/nfs.cfg
+++ b/nfs/nfs.cfg
@@ -1,9 +1,5 @@
 [NFS_1]
-mount_folder = "/mnt/sharedfolder_client"
+mount_folder = "<your_mount_point_1>"
 
 [NFS_2]
-mount_folder = "/mnt/sharedfolder_client_2"
-
-[NFS_3]
-mount_folder = "/mnt/sharedfolder_client_test"
-
+mount_folder = "<your_mount_point_2>"
