--- a/nfs/nfs.cfg
+++ b/nfs/nfs.cfg
@@ -1,5 +1,5 @@
-[NFS_1]
+[Name_to_be_Displayed_on_Client_1]
 mount_folder = "<your_mount_point_1>"
 
-[NFS_2]
+[Name_to_be_Displayed_on_Client_2]
 mount_folder = "<your_mount_point_2>"
