--- a/kong/kong.cfg
+++ b/kong/kong.cfg
@@ -1,4 +1,4 @@
-[kong1_Site24x7]
+[display_name]
 host_name = "localhost"
 port = "8001"
-service_name = "zoho-service"
+service_name = "<service_name>"
