--- a/artemis/artemis.cfg
+++ b/artemis/artemis.cfg
@@ -1,8 +1,8 @@
-[Artemis_Site24x7]
+[display_name]
 host_name = "localhost"
 port = "1099"
-broker_name = "kavin"
-address_name = "kavin_address"
-queue_name = "kavin_queue"
-user = ""
-password = ""
+broker_name = "<broker_name>"
+address_name = "<broker_address_name>"
+queue_name = "<broker_queue_name>"
+user = "<user_name_optional>"
+password = "<user_password_optional>"
