--- a/proxysql/proxysql.cfg
+++ b/proxysql/proxysql.cfg
@@ -1,5 +1,5 @@
 [display_name]
 host_name = "localhost"
 port = "6032"
-user = "admin"
-password = "admin"
+user = "<user_name>"
+password = "<user_password>"
