--- a/file_monitoring/file_monitoring.cfg
+++ b/file_monitoring/file_monitoring.cfg
@@ -1,5 +1,5 @@
-[file1]
-file="Absoulte path for the file to be monitored"
-search_text=None
-plugin_version="1"
-heartbeat="True"
+[display_name]
+filename = "<YOUR FILE NAME>"
+hashtype = "<HASH TYPE OF YOUR CHOICE (OPTIONAL)>"
+search_text = "<SEARCH TEXT OF YOUR CHOICE (OPTIONAL)>"
+case_sensitive = "<True (OPTIONAL - By default 'False')>"
