--- a/mongodb_cluster/mongodb_cluster.cfg
+++ b/mongodb_cluster/mongodb_cluster.cfg
@@ -1,6 +1,6 @@
 ["mongodb_cluster"]
-group_id="6080fc32b449622900b6612e"
-public_key = "jifqsfrc"
-private_key = "80d11231-0482-4387-8107-ea0336380452"
+group_id= <your_group_id>
+public_key = <your_public_key>
+private_key = <your_private_key>
 
 
