--- a/mongodb_measurement_of_process/mongodb_measurement_of_process.cfg
+++ b/mongodb_measurement_of_process/mongodb_measurement_of_process.cfg
@@ -1,6 +1,6 @@
 ["mongodb_measurement_of_process"]
-group_id="6080fc32b449622900b6612e"
-host="cluster0-shard-00-02.bcgaj.mongodb.net"
+group_id= <your_group_id>
+host= <your_host_name>
 port="27017"
-public_key = 'jifqsfrc'
-private_key = '80d11231-0482-4387-8107-ea0336380452'
+public_key = <your_public_key>
+private_key = <your_private_key>
