--- a/prestodb/prestodb.cfg
+++ b/prestodb/prestodb.cfg
@@ -1,3 +1,3 @@
-[display_name]
-host = "<your_host_name>"
-port = "<port number you mentioned in etc/config.properties>"
+[prestodb]
+host = "localhost"
+port = "36799"
