--- a/mysql/mysql.cfg
+++ b/mysql/mysql.cfg
@@ -1,6 +1,12 @@
-#The section name will be appended in Plugin monitor display name
+#global_configurations is to set plugin version, configure yes or no for using agent python, monitor heartbeat for the plugin
+[global_configurations]
+plugin_version = 1
+heartbeat_required = True
+use_agent_python = 1
+
+#This section to collect data for the with the following input
 [MySQL]
-host=localhost
-port=3306
-username=test
-password=""
+host = localhost
+port = 3306
+username = test
+password = None
