--- a/jenkins_web/jenkins_web.cfg
+++ b/jenkins_web/jenkins_web.cfg
@@ -3,4 +3,4 @@ host=<host_name>
 port=<port_number>
 username=<your_username>
 password=<your_password>
-apiky=<your_api_key>
+apikey=<your_api_key>
