--- a/url_check/url_check.cfg
+++ b/url_check/url_check.cfg
@@ -1,6 +1,6 @@
 [cluster_prod]
 url = 'https://kubecluster.com:9091'
-content_check = 'go_memstats_heap_alloc_bytes'
+content_check = 'None'
 
 [secondary_server]
 url = "https://secondaryurl.com:9999"
