--- a/ibmdb2/ibmdb2.cfg
+++ b/ibmdb2/ibmdb2.cfg
@@ -1,14 +1,14 @@
 [Sample_db_1]
-DB2_HOST 	= "<hostname>"
-DB2_PORT 	= "<port>"
-DB2_USERNAME	= "<username>"
-DB2_PASSWORD 	= "<password>"
-DB2_SAMPLE_DB	= "<sample_db>"
+host 		= "<hostname>"
+port 		= "<port>"
+username	= "<username>"
+password 	= "<password>"
+sample_db	= "<sample_db>"
 
 [Sample_db_1]
-DB2_HOST 	= "<hostname>"
-DB2_PORT 	= "<port>"
-DB2_USERNAME	= "<username>"
-DB2_PASSWORD 	= "<password>"
-DB2_SAMPLE_DB	= "<sample_db>"
+host 		= "<hostname>"
+port 		= "<port>"
+username	= "<username>"
+password 	= "<password>"
+sample_db	= "<sample_db>"
 
