--- a/apache_monitoring/apache_monitoring.cfg
+++ b/apache_monitoring/apache_monitoring.cfg
@@ -5,4 +5,7 @@ password = None
 timeout = 30
 plugin_version = "1"
 heartbeat = "true"
+logs_enabled = <logenabled>
+log_type_name = <logtypename>
+log_file_path = <logfilepath>
 
