update applog in mysql monitoring

--- a/mysql_monitoring/mysql_monitoring.cfg
+++ b/mysql_monitoring/mysql_monitoring.cfg
@@ -5,7 +5,7 @@ username = <username>
 database = <dbname>
 table = <tablename>
 password = <password>
-logs_enabled=<logenabled>
-log_type_name=<logtypename>
-log_file_path=<logfilepath>
+logs_enabled=true
+log_type_name="Mysql General Logs"
+log_file_path="/var/log/myqld*.log, /var/log/mysql/*.log"
 
