--- a/ibm_mq_monitoring/ibm_mq_monitoring.cfg
+++ b/ibm_mq_monitoring/ibm_mq_monitoring.cfg
@@ -6,6 +6,10 @@ host=<HOST NAME>
 port=<PORT NUMBER>
 username=<IBM MQ USERNAME>
 password =<IBM MQ PASSWORD>
+logs_enabled = "False"
+log_type_name = <IBM MQ LOGS>
+log_file_path = <LOG PATH>
+
 
 
 
