Adding db in multiconfig for mongodb

--- a/mongod/mongod.cfg
+++ b/mongod/mongod.cfg
@@ -1,8 +1,9 @@
-["mongodb"]
-host=<host_name>
-port=<port_number>
-username=<your_username>
-password=<your_password>
-dbstats=<dbstats>
-replset=<replset>
-dbname=<dbname>
+[mongo_db]
+host ="localhost"
+port ="27017"
+username ="None"
+password ="None"
+dbstats ="yes"
+replset ="no"
+dbname ="local"
+authdb="admin"
