--- a/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
+++ b/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
@@ -1,9 +1,9 @@
-[kafka_monitoring]
-kafka_consumer_host="localhost"
-kafka_consumer_jmx_port="9983"
-kafka_consumer_partition=0
-kafka_topic_name="quickstart-events"
-kafka_consumer_client_id="console-consumer"
+[kafka_consumer_1]
+kafka_consumer_host=<KAFKA_BROKER_HOST_NAME>
+kafka_consumer_jmx_port=<KAFKA_BROKER_PORT_NO>
+kafka_consumer_partition=<KAFKA_CONSUMER_PARTITION_NO>
+kafka_topic_name=<KAFKA_TOPIC_NAME>
+kafka_consumer_client_id=<KAFKA_CONSUMER_CLIENT_ID>
 logs_enabled=False
 log_type_name=None
 log_file_path=None
