--- a/Kafka_Complete_Monitoring/Kafka_Broker_Monitoring/kafka_broker_monitoring.cfg
+++ b/Kafka_Complete_Monitoring/Kafka_Broker_Monitoring/kafka_broker_monitoring.cfg
@@ -1,9 +1,8 @@
-[kafka_monitoring]
-kafka_host="localhost"
-kafka_jmx_port="9999"
-kafka_consumer_partition=0
-kafka_topic_name="quickstart-events"
+[kafka_broker_1]
+kafka_host=<KAFKA_BROKER_HOST_NAME>
+kafka_jmx_port=<KAFKA_BROKER_PORT_NO>
+kafka_consumer_partition=<KAFKA_CONSUMER_PARTITION_NO>
+kafka_topic_name=<KAFKA_TOPIC_NAME>
 logs_enabled=False
 log_type_name=None
 log_file_path=None
-
