--- a/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
+++ b/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
@@ -1,6 +1,6 @@
 [kafka_consumer_1]
-kafka_consumer_host=<KAFKA_BROKER_HOST_NAME>
-kafka_consumer_jmx_port=<KAFKA_BROKER_PORT_NO>
+kafka_consumer_host=<KAFKA_CONSUMER_HOST_NAME>
+kafka_consumer_jmx_port=<KAFKA_CONSUMER_PORT_NO>
 kafka_consumer_partition=<KAFKA_CONSUMER_PARTITION_NO>
 kafka_topic_name=<KAFKA_TOPIC_NAME>
 kafka_consumer_client_id=<KAFKA_CONSUMER_CLIENT_ID>
