--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -1,6 +1,11 @@
-#The section name will be appended in Plugin monitor display name
 [elasticsearch]
-host=localhost
-port=9200
-username=None
-password=None
+host = <ELASTICSEARCH_HOST>
+port = <ELASTICSEARCH_PORT>
+node_name=<ELASTICSEARCH_NODE_NAME>
+username=<ELASTICSEARCH_USERNAME>
+password = <ELASTICSEARCH_PASSWORD>
+sslpath= <ELASTICSEARCH_SSL_PATH>
+ssl=<ELASTICSEARCH_SSL_OPTION>
+logs_enabled = "false"
+log_type_name = None
+log_file_path = None
