--- a/saphana_database/saphana_database.cfg
+++ b/saphana_database/saphana_database.cfg
@@ -3,3 +3,6 @@ host=<hostname>
 port=<port>
 username=<username>
 password=<password>
+logs_enabled=False
+log_type_name="saphana_log"
+log_file_path="/usr/sap/<SID>/HDB<Instance number>/<hostname>/trace/*.log"
