--- a/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
+++ b/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
@@ -4,7 +4,8 @@ port=1521
 sid=<SID>
 username=<USERNAME>
 password=<PASSWORD>
-tablespace_names='["SYSTEM","USERS"]
+tablespace_names='["SYSTEM","USERS"]'
 logs_enabled="False"
 log_type_name =None
 log_file_path=None
+oracle_home=<oracle_home>
