--- a/PostgresCustomQuery/PostgresCustomQuery.cfg
+++ b/PostgresCustomQuery/PostgresCustomQuery.cfg
@@ -4,5 +4,4 @@ username=None
 password=None
 hostname='localhost'
 port=5432
-display_name='active-query-duration'
-query="SELECT COALESCE( (SELECT EXTRACT(EPOCH FROM NOW()) - EXTRACT(EPOCH FROM query_start) AS duration FROM pg_stat_activity WHERE state = 'active' AND pid != pg_backend_pid() AND usename != 'repmgr' ORDER BY duration DESC nulls last LIMIT 1), 0);"
+query="SELECT buffers_checkpoint, buffers_backend, maxwritten_clean, checkpoints_req, checkpoints_timed, buffers_alloc FROM pg_stat_bgwriter;"
