--- a/litespeed_monitoring/litespeed_monitoring.cfg
+++ b/litespeed_monitoring/litespeed_monitoring.cfg
@@ -1,1 +1,7 @@
+[ls_monitoring]
+metric_path='/tmp/lshttpd/'
+virtual_host='_AdminVHost'
+logs_enabled='False'
+log_type_name=None
+log_file_path=None
 
