Windows performance counter monitoring update

--- a/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
+++ b/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
@@ -1,4 +1,4 @@
 [counter_monitoring]
 counters="\LogicalDisk(C:)\Avg. Disk sec/Write,\Processor Information(_Total)\% Processor Time,\LogicalDisk(C:)\Avg. Disk Bytes/Write"
 units="sec/Write,%,bytes/Write"
-displaynames="c:disk sec/write,processor time %,c:disk bytes/write"
+displaynames="c_disk_secperwrite,processor_time,c_disk_bytesperwrite"
