windows perfmon counter removing units

--- a/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
+++ b/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
@@ -1,4 +1,3 @@
 [counter_monitoring]
-counters="\LogicalDisk(C:)\Avg. Disk sec/Write,\Processor Information(_Total)\% Processor Time,\LogicalDisk(C:)\Avg. Disk Bytes/Write"
-units="sec/Write,percentage,bytes/Write"
-displaynames="CDisk_write,processor_time,CDisk_bytesperwrite"
+counters="\Web Service(_Total)\Current Connections,\Processor Information(_Total)\% Processor Time,\Server\Logon Total"
+displaynames="webservice_current_connections,processor_time,total_server_logon"
