--- a/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
+++ b/WindowsPerfmonCounterMonitoring/WindowsPerfmonCounterMonitoring.cfg
@@ -1,3 +1,4 @@
 [counter_monitoring]
-counters="\Web Service(_Total)\Current Connections,\Processor Information(_Total)\% Processor Time,\Server\Logon Total"
-displaynames="webservice_current_connections,processor_time,total_server_logon"
+counters="\LogicalDisk(C:)\Avg. Disk sec/Write,\Processor Information(_Total)\% Processor Time,\LogicalDisk(C:)\Avg. Disk Bytes/Write,\Processor(_Total)\% Idle Time,\Event Log\Events/sec,\PhysicalDisk(_Total)\Avg. Disk Bytes/Read,\LogicalDisk(_Total)\Current Disk Queue Length,\Thread(_Total/_Total)\Priority Current,\Process(_Total)\IO Read Operations/sec,\Database(HealthService)\Database Cache % Hit"
+units="sec/Write,%,bytes/Write,%,/sec,bytes/read,count,count,/sec,%"
+displaynames="disk_write,processor_time,disk_byteswrite,Processor_idle_time,event_logs,disk_read,disk_queue_length,current_priority_thread,IO_read_operations,database_healthservice_cache_hit"
