mysql update to close connection and cursor

--- a/mysql_monitoring/mysql_monitoring.cfg
+++ b/mysql_monitoring/mysql_monitoring.cfg
@@ -1,8 +1,8 @@
 [MySQL]
-host = <hostname>
-port = <port>
-username = <username>
-password = <password>
+host = localhost
+port = 3306
+username = "root"
+password = 
 logs_enabled=true
 log_type_name="Mysql General Logs"
-log_file_path="/var/log/myqld*.log, /var/log/mysql/*.log"
+log_file_path="/var/log/mysql/error.log"
