--- a/nginxplus/nginxplus.cfg
+++ b/nginxplus/nginxplus.cfg
@@ -1,5 +1,5 @@
 [nginxplus]
-nginx_status_url=<URL>
+nginx_status_url="http://localhost:80/api/3"
 username=<username>
 password=<password>
 logs_enabled="False"
