--- a/mongoDB/mongoDB.cfg
+++ b/mongoDB/mongoDB.cfg
@@ -1,7 +1,11 @@
 [mongo_db]
 host ="localhost"
 port ="27017"
-username ="None"
-password ="None"
-dbname ="local"
+username =None
+password =None
+dbname ="mydatabase"
 authdb="admin"
+tls="False"
+tlscertificatekeyfile=None
+tlscertificatekeyfilepassword= None
+tlsallowinvalidcertificates="True"
