--- a/certificate_monitoring/certificate_monitoring.cfg
+++ b/certificate_monitoring/certificate_monitoring.cfg
@@ -1,3 +1,4 @@
 [localhost]
 certPath=Cert:/LocalMachine/My
-certName=IIS Express Development Certificate
+thumbprint=<thumbprint-of-certificate
+certName=<Name-of-the-plugin-monitor>
