--- a/elasticsearchnodes/elasticsearchnodes.cfg
+++ b/elasticsearchnodes/elasticsearchnodes.cfg
@@ -1,7 +1,7 @@
 #The section name will be appended in Plugin monitor display name
 [elasticsearchnodes]
-host=localhost
-port=9200
-username=None
-password=None
-NODE =Node Name
+host="localhost"
+port="9200"
+username="None"
+password="None"
+node_name="Node Name"
