--- a/elasticsearchcluster/elasticsearchcluster.cfg
+++ b/elasticsearchcluster/elasticsearchcluster.cfg
@@ -1,6 +1,6 @@
 #The section name will be appended in Plugin monitor display name
 [elasticsearchcluster]
-host=localhost
-port=9200
-username=None
-password=None
+host="localhost"
+port="9200"
+username="None"
+password="None"
