--- a/mongoDB/mongoDB.cfg
+++ b/mongoDB/mongoDB.cfg
@@ -4,8 +4,8 @@ port ="27017"
 username ="None"
 password ="None"
 dbname ="mydatabase"
-authdb="admin"
-tls="False"
-tlscertificatekeyfile="None"
-tlscertificatekeyfilepassword="None"
-tlsallowinvalidcertificates="True"
+authdb ="admin"
+tls ="False"
+tlscertificatekeyfile ="None"
+tlscertificatekeyfilepassword ="None"
+tlsallowinvalidcertificates ="True"
