--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -1,11 +1,11 @@
 [elasticsearch]
-host = <ELASTICSEARCH_HOST>
+hostname = <ELASTICSEARCH_HOST>
 port = <ELASTICSEARCH_PORT>
-node_name=<ELASTICSEARCH_NODE_NAME>
-username=<ELASTICSEARCH_USERNAME>
+nodename = <ELASTICSEARCH_NODE_NAME>
+username = <ELASTICSEARCH_USERNAME>
 password = <ELASTICSEARCH_PASSWORD>
-sslpath= <ELASTICSEARCH_SSL_PATH>
-ssl=<ELASTICSEARCH_SSL_OPTION>
+ssl_option = "False"
+cafile = None
 logs_enabled = "false"
 log_type_name = None
 log_file_path = None
