--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -1,7 +1,7 @@
 [elasticsearch]
-hostname = <ELASTICSEARCH_HOST>
+host = <ELASTICSEARCH_HOST>
 port = <ELASTICSEARCH_PORT>
-nodename = <ELASTICSEARCH_NODE_NAME>
+node_name = <ELASTICSEARCH_NODE_NAME>
 username = <ELASTICSEARCH_USERNAME>
 password = <ELASTICSEARCH_PASSWORD>
 ssl_option = "False"
