added tls to oracle plugins

--- a/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
+++ b/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
@@ -5,7 +5,9 @@ sid=<SID>
 username=<USERNAME>
 password=<PASSWORD>
 tablespace_names='["SYSTEM","USERS"]'
+tls = <True/False>
+wallet_location = <WALLET_LOCATION>
+oracle_home = <ORACLE_HOME>
 logs_enabled="False"
 log_type_name =None
 log_file_path=None
-oracle_home=<oracle_home>
