--- a/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
+++ b/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
@@ -1,12 +1,12 @@
 [ORCL]
-hostname=localhost
-port=1521
-sid=<SID>
-username=<USERNAME>
-password=<PASSWORD>
+hostname = <HOSTNAME>
+port = <PORT>
+sid = <SID>
+username = <USERNAME>
+password = <PASSWORD>
 tls = <True/False>
 wallet_location = <WALLET_LOCATION>
 oracle_home = <ORACLE_HOME>
-logs_enabled="False"
-log_type_name =None
-log_file_path=None
+logs_enabled = "False"
+log_type_name = None
+log_file_path = None
