--- a/redis/Redis.cfg
+++ b/redis/Redis.cfg
@@ -1,6 +1,6 @@
 [redis]
-host = <REDIS_HOST>
-port = <REDIS_PORT>
-password = <REDIS_PASSWORD>
-dbs = <REDIS_DBS>
+host = "localhost"
+port = "6379"
+password = ""
+dbs = "0"
 
