--- a/OracleFullStackMonitoring/OracleSGA/OracleSGA.cfg
+++ b/OracleFullStackMonitoring/OracleSGA/OracleSGA.cfg
@@ -1,12 +1,12 @@
 [ORCL]
-hostname = <HOSTNAME>
-port = <PORT>
-sid = <SID>
-username = <USERNAME>
-password = <PASSWORD>
-tls = <True/False>
-wallet_location = <WALLET_LOCATION>
-oracle_home = <ORACLE_HOME>
+hostname = "HOSTNAME"
+port = "PORT"
+sid = "SID"
+username = "USERNAME"
+password = "PASSWORD"
+tls = "True/False"
+wallet_location = "WALLET_LOCATION"
+oracle_home = "ORACLE_HOME"
 logs_enabled = "False"
-log_type_name = None
-log_file_path = None
+log_type_name = "None"
+log_file_path = "None"
