--- a/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
+++ b/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
@@ -8,6 +8,6 @@ tls = "True/False"
 wallet_location = "WALLET_LOCATION"
 oracle_home = "ORACLE_HOME"
 logs_enabled = "False"
-log_type_name = None
-log_file_path = None
+log_type_name = "None"
+log_file_path = "None"
 
