--- a/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
+++ b/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
@@ -4,7 +4,7 @@ port = "PORT"
 sid = "SID"
 username = "USERNAME"
 password = "PASSWORD"
-tls = "True/False"
+tls = "False"
 wallet_location = "WALLET_LOCATION"
 oracle_home = "ORACLE_HOME"
 logs_enabled = "False"
