--- a/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
+++ b/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
@@ -4,7 +4,7 @@ port = "PORT"
 sid = "SID"
 username = "USERNAME"
 password = "PASSWORD"
-tls = "True/False"
+tls = "False"
 tablespace_names = '["SYSTEM","USERS"]'
 wallet_location = "WALLET_LOCATION"
 oracle_home = "ORACLE_HOME"
