--- a/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
+++ b/Kafka_Complete_Monitoring/Kafka_Consumer_Monitoring/kafka_consumer_monitoring.cfg
@@ -1,10 +1,10 @@
 [kafka_consumer_1]
-kafka_consumer_host=<KAFKA_CONSUMER_HOST_NAME>
-kafka_consumer_jmx_port=<KAFKA_CONSUMER_PORT_NO>
-kafka_consumer_partition=<KAFKA_CONSUMER_PARTITION_NO>
-kafka_topic_name=<KAFKA_TOPIC_NAME>
-kafka_consumer_client_id=<KAFKA_CONSUMER_CLIENT_ID>
-logs_enabled=False
-log_type_name=None
-log_file_path=None
+kafka_consumer_host="KAFKA_CONSUMER_HOST_IP"
+kafka_consumer_jmx_port="KAFKA_CONSUMER_PORT_NO"
+kafka_consumer_partition="KAFKA_CONSUMER_PARTITION_NO"
+kafka_topic_name="KAFKA_TOPIC_NAME"
+kafka_consumer_client_id="KAFKA_CONSUMER_CLIENT_ID"
+logs_enabled="False"
+log_type_name="None"
+log_file_path="None"
 
