--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -1,9 +1,9 @@
 [elasticsearch]
-host = "ELASTICSEARCH_HOST"
-port = "ELASTICSEARCH_PORT"
-node_name = "ELASTICSEARCH_NODE_NAME"
-username = "ELASTICSEARCH_USERNAME"
-password = "ELASTICSEARCH_PASSWORD"
+host = "localhost"
+port = "9200"
+node_name = "node_name"
+username = "elasticsearch_username"
+password = "elasticsearch_password"
 ssl_option = "False"
 cafile = "None"
 logs_enabled = "false"
