--- a/ibm_mq_monitoring/ibm_mq_monitoring.cfg
+++ b/ibm_mq_monitoring/ibm_mq_monitoring.cfg
@@ -1,21 +1,11 @@
 [ibm_mq]
-queue_manager_name =<QUEUE MANAGER NAME>
-channel_name=<CHANNEL NAME>
-queue_name=<QUEUE NAME>
-host=<HOST NAME>
-port=<PORT NUMBER>
-username=<IBM MQ USERNAME>
-password =<IBM MQ PASSWORD>
+queue_manager_name ="QMGR"
+channel_name="channel_name"
+queue_name="queue_name"
+host="localhost"
+port="1415"
+username="ibm_mq_username"
+password ="ibm_mq_password"
 logs_enabled = "False"
-log_type_name = <IBM MQ LOGS>
-log_file_path = <LOG PATH>
-
-
-
-
-
-
-
-
-
-
+log_type_name = "None"
+log_file_path = "None"
