--- a/OracleFullStackMonitoring/OracleCore/OracleCore.cfg
+++ b/OracleFullStackMonitoring/OracleCore/OracleCore.cfg
@@ -1,12 +1,12 @@
 [ORCL]
-hostname = "HOSTNAME"
-port = "PORT"
-sid = "SID"
-username = "USERNAME"
-password = "PASSWORD"
+hostname = "localhost"
+port = "1521"
+sid = "ORCL"
+username = "oracle_username"
+password = "oracle_password"
 tls = "False"
-wallet_location = "WALLET_LOCATION"
-oracle_home = "ORACLE_HOME"
+wallet_location = "/opt/oracle/product/19c/dbhome_1/network/admin/wallets"
+oracle_home = "/opt/oracle/product/19c/dbhome_1/"
 logs_enabled = "False"
 log_type_name = "None"
 log_file_path = "None"
