--- a/mongodb_atlas/mongodb_atlas.cfg
+++ b/mongodb_atlas/mongodb_atlas.cfg
@@ -1,3 +1,3 @@
 [mongo_db_atlas]
-mongo_connect_string =<mongodb connection string>
-dbname=<monogdb database name>
+mongo_connect_string ="mongodb+srv://<username>:<password>@<cluster-name>.mongodb.net/<database>?retryWrites=true&w=majority"
+dbname="test"
