--- a/mongodb_atlas_perf_metrics/mongodb_atlas_perf_metrics.cfg
+++ b/mongodb_atlas_perf_metrics/mongodb_atlas_perf_metrics.cfg
@@ -1,7 +1,6 @@
 ["mongodb_atlas_perf_metrics"]
-group_id=<group_id>
-host=<host_name>
-port=<port_number>
-public_key = <public_key>
-private_key = <private_key>
-
+group_id="group_id"
+host="host_name"
+port="port_number"
+public_key = "public_key"
+private_key = "private_key"
