--- a/mysql_custom_query/mysql_custom_query.cfg
+++ b/mysql_custom_query/mysql_custom_query.cfg
@@ -1,7 +1,7 @@
 [mysql_custom_query]
-host = localhost
-port = 3306
+host = "localhost"
+port = "3306"
 username = "root"
-password = 
-db = sys
+password = "password"
+db = "sys"
 query = "select * from metrics LIMIT 1"
