--- a/OracleFullStackMonitoring/OracleCore/OracleCore.cfg
+++ b/OracleFullStackMonitoring/OracleCore/OracleCore.cfg
@@ -7,6 +7,6 @@ password = "oracle_password"
 tls = "False"
 wallet_location = "/opt/oracle/product/19c/dbhome_1/network/admin/wallets"
 oracle_home = "/opt/oracle/product/19c/dbhome_1/"
-logs_enabled = "False"
+logs_enabled = "false"
 log_type_name = "None"
 log_file_path = "None"
