--- a/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
+++ b/OracleFullStackMonitoring/OraclePDB/OraclePDB.cfg
@@ -1,13 +1,12 @@
 [ORCL]
-hostname = "HOSTNAME"
-port = "PORT"
-sid = "SID"
-username = "USERNAME"
-password = "PASSWORD"
-tls = "False"
-wallet_location = "WALLET_LOCATION"
-oracle_home = "ORACLE_HOME"
-logs_enabled = "False"
+hostname = "localhost"
+port = "1521"
+sid = "ORCL"
+username = "oracle_username"
+password = "oracle_password"
+tls = "false"
+wallet_location = "/opt/oracle/product/19c/dbhome_1/network/admin/wallets"
+oracle_home = "/opt/oracle/product/19c/dbhome_1/"
+logs_enabled = "false"
 log_type_name = "None"
 log_file_path = "None"
-
