--- a/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
+++ b/OracleFullStackMonitoring/OracleTablespaceUsage/OracleTablespaceUsage.cfg
@@ -1,14 +1,13 @@
 [ORCL]
-hostname = "HOSTNAME"
-port = "PORT"
-sid = "SID"
-username = "USERNAME"
-password = "PASSWORD"
-tls = "False"
+hostname = "localhost"
+port = "1521"
+sid = "ORCL"
+username = "oracle_username"
+password = "oracle_password"
 tablespace_names = '["SYSTEM","USERS"]'
-wallet_location = "WALLET_LOCATION"
-oracle_home = "ORACLE_HOME"
-oracle_home = "ORACLE_HOME"
-logs_enabled = "False"
+tls = "false"
+wallet_location = "/opt/oracle/product/19c/dbhome_1/network/admin/wallets"
+oracle_home = "/opt/oracle/product/19c/dbhome_1/"
+logs_enabled = "false"
 log_type_name = "None"
 log_file_path = "None"
