--- a/OracleFullStackMonitoring/OracleTablespaceDetails/OracleTablespaceDetails.cfg
+++ b/OracleFullStackMonitoring/OracleTablespaceDetails/OracleTablespaceDetails.cfg
@@ -4,7 +4,7 @@ port = "1521"
 sid = "ORCL"
 username = "oracle_username"
 password = "oracle_password"
-tablespace_name = 'SYSTEM"
+tablespace_name = "SYSTEM"
 tls = "false"
 wallet_location = "/opt/oracle/product/19c/dbhome_1/network/admin/wallets"
 oracle_home = "/opt/oracle/product/19c/dbhome_1/"
