--- a/ibmdb2/ibmdb2.cfg
+++ b/ibmdb2/ibmdb2.cfg
@@ -1,14 +1,14 @@
 [Sample_db_1]
-host 		= "<hostname>"
-port 		= "<port>"
-username	= "<username>"
-password 	= "<password>"
-sample_db	= "<sample_db>"
+host 		= "hostname"
+port 		= "port"
+username	= "username"
+password 	= "password"
+sample_db	= "sample_db"
 
 [Sample_db_2]
-host 		= "<hostname>"
-port 		= "<port>"
-username	= "<username>"
-password 	= "<password>"
-sample_db	= "<sample_db>"
+host 		= "hostname"
+port 		= "port"
+username	= "username"
+password 	= "password"
+sample_db	= "sample_db"
 
