--- a/idrac/idrac.cfg
+++ b/idrac/idrac.cfg
@@ -1,4 +1,4 @@
 [idrac_main]
-hostname = 'hostname'
-snmp_version = '2c' 
-snmp_community_str = 'public'
+hostname = "ip-address"
+snmp_version = "2c" 
+snmp_community_str = "public"
