--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,8 +1,8 @@
 [haproxy]
-username=<username>
-password=<password>
-hostname=<hostname>
-port=<port>
+username="username"
+password="password"
+hostname="localhost"
+port="80"
 logs_enabled="True"
 log_type_name="haproxy"
 log_file_path="/var/log/haproxy.log"
