--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,8 +1,7 @@
 [haproxy]
 username="username"
 password="password"
-hostname="localhost"
-port="80"
+url="http://localhost:80/stats;csv"
 logs_enabled="True"
 log_type_name="haproxy"
 log_file_path="/var/log/haproxy.log"
