--- a/haproxy/haproxy_backend/haproxy_backend.cfg
+++ b/haproxy/haproxy_backend/haproxy_backend.cfg
@@ -1,9 +1,8 @@
 [haproxy]
-username=<username>
-password=<password>
-hostname=<hostname>
-port=<port>
-svname=<svname>
+username="None"
+password="None"
+url="http://localhost:80/stats;csv"
+svname="BACKEND"
 logs_enabled="True"
 log_type_name="haproxy"
 log_file_path="/var/log/haproxy.log"
