--- a/weblogic_monitoring/weblogic_monitoring.cfg
+++ b/weblogic_monitoring/weblogic_monitoring.cfg
@@ -1,9 +1,9 @@
 [weblogic_1]
-hostname=<HOSTNAME>
-port=<PORT NUMBER>
-server_name=<SERVER_NAME>
-username=<WEBLOGIC PASSWORD>
-password=<WEBLOGIC PASSWORD>
+hostname="127.0.0.1"
+port="9010"
+server_name="Server_Name"
+username="username"
+password="password"
 logs_enabled=False
 log_type_name=None
 log_file_path=None
