--- a/aerospike_monitoring/aerospike_namespace_monitoring/aerospike_namespace_monitoring.cfg
+++ b/aerospike_monitoring/aerospike_namespace_monitoring/aerospike_namespace_monitoring.cfg
@@ -1,6 +1,6 @@
     [Aerospike Namespace Monitoring]
     hostname="localhost"
-    port=3000
+    port="3000"
     tls_enable=false
     tls_name=None
     cafile=None
