--- a/aerospike_monitoring/aerospike_stats_monitoring/aerospike_stats_monitoring.cfg
+++ b/aerospike_monitoring/aerospike_stats_monitoring/aerospike_stats_monitoring.cfg
@@ -4,7 +4,7 @@ port="3000"
 tls_enable=false
 tls_name=None
 cafile=None
-username="USERNAME>"
+username="USERNAME"
 password="PASSWORD"
 node_id="NODE ID"
 logs_enabled=False
