--- a/nginxplus/nginxplus.cfg
+++ b/nginxplus/nginxplus.cfg
@@ -1,7 +1,7 @@
 [nginxplus]
 nginx_status_url="http://localhost:80/api/3"
-username=<username>
-password=<password>
+username="username"
+password="password"
 logs_enabled="False"
 log_type_name =None
 log_file_path=None
