--- a/nginx/nginx.cfg
+++ b/nginx/nginx.cfg
@@ -2,8 +2,8 @@
 plugin_version=1
 heartbeat=true
 nginx_status_url="http://localhost/nginx_status"
-username=None
-password=None
+username="None"
+password="None"
 timeout=60
 logs_enabled = "true"
 log_type_name = "Nginx Logs"
