--- a/postgres/postgres.cfg
+++ b/postgres/postgres.cfg
@@ -1,7 +1,7 @@
 #The section name will be appended in Plugin monitor display name
 [dbname]
-host=localhost
-port=5432
-username=None
-password=None
-db=postgres
+host="localhost"
+port="5432"
+username="None"
+password="None"
+db="postgres"
