--- a/certificate_monitoring/certificate_monitoring.cfg
+++ b/certificate_monitoring/certificate_monitoring.cfg
@@ -1,4 +1,4 @@
 [localhost]
-certPath=Cert:/LocalMachine/My
-thumbprint=<thumbprint-of-certificate>
-certName=<Name-of-the-plugin-monitor>
+certPath="Cert:/LocalMachine/My"
+thumbprint="thumbprint-of-certificate"
+certName="Name-of-the-plugin-monitor"
