--- a/jenkins_web/jenkins_web.cfg
+++ b/jenkins_web/jenkins_web.cfg
@@ -1,6 +1,6 @@
-["jenkins_web"]
-host=<host_name>
-port=<port_number>
-username=<your_username>
-password=<your_password>
-apikey=<your_api_key>
+[jenkins_web]
+host="host"
+port="port"
+username="your_username"
+password="your_password"
+apikey="your_api_key"
