--- a/jenkins_specific_job/jenkins_specific_job.cfg
+++ b/jenkins_specific_job/jenkins_specific_job.cfg
@@ -1,6 +1,6 @@
-["jenkins_specific_job"]
-host=<host_name>
-port=<port_number>
-username=<your_username>
-password=<your_password>
-jobname=<job_name>
+[jenkins_specific_job]
+host="host"
+port="port"
+username="your_username"
+password="your_password"
+jobname="job_name"
