--- a/jenkins_performance/jenkins_performance.cfg
+++ b/jenkins_performance/jenkins_performance.cfg
@@ -1,6 +1,6 @@
-["jenkins_performance"]
-host=<host_name>
-port=<port_number>
-username=<your_username>
-password=<your_password>
-apikey=<your_api_key>
+[jenkins_performance]
+host="host"
+port="port"
+username="your_username"
+password="your_password"
+apikey="your_api_key"
