--- a/jenkins_job/jenkins_job.cfg
+++ b/jenkins_job/jenkins_job.cfg
@@ -1,6 +1,6 @@
-["jenkins_job"]
-host=<host_name>
-port=<port_number>
-username=<your_username>
-password=<your_password>
-apikey=<your_api_key>
+[jenkins_job]
+host="host"
+port="port"
+username="your_username"
+password="your_password"
+apikey="your_api_key"
