--- a/mssql_custom_query/mssql_custom_query.cfg
+++ b/mssql_custom_query/mssql_custom_query.cfg
@@ -1,6 +1,6 @@
 [mssql_custom_query]
-SQLServer = <server_name> 
-SQLDBName = <dbname>
-query = <sql_query>
-sqlusername = <sql_username>
-sqlpassword  = <sql_password>
+SQLServer = "server_name"
+SQLDBName = "dbname"
+query = "sql_query"
+sqlusername = "sql_username"
+sqlpassword  = "sql_password"
