--- a/file_monitoring/file_monitoring.cfg
+++ b/file_monitoring/file_monitoring.cfg
@@ -1,5 +1,5 @@
 [display_name]
-filename = "<YOUR FILE NAME>"
-hashtype = "<HASH TYPE OF YOUR CHOICE (OPTIONAL)>"
-search_text = "<SEARCH TEXT OF YOUR CHOICE (OPTIONAL)>"
-case_sensitive = "<True (OPTIONAL - By default 'False')>"
+filename = "File Name"
+hashtype = "Hash type of your choice (Optional)"
+search_text = "Search text of your choice (Optional)"
+case_sensitive = "True"  #(Optional)
