--- a/oracle_custom_query/oracle_custom_query.cfg
+++ b/oracle_custom_query/oracle_custom_query.cfg
@@ -1,8 +1,8 @@
 [query_1]
 hostname="localhost"
 port="1521"
-sid="<SID>"
-username="<USERNAME>"
-password="<PASSWORD>"
+sid="SID"
+username="USERNAME"
+password="PASSWORD"
 oracle_home="None"
 query="SELECT VALUE, NAME FROM gv$pgastat where NAME IN ('total PGA allocated', 'total freeable PGA memory', 'maximum PGA allocated','total PGA inuse')"
