--- a/kafka/kafka.cfg
+++ b/kafka/kafka.cfg
@@ -1,5 +1,5 @@
 [apache_kafka]
 kafka_host= "kafka_host"
-kafka_jmx_port= "kafka_port>
+kafka_jmx_port= "kafka_port"
 kafka_topic_name= "kafka-topic"
 kafka_home= "kafka_home"
