--- a/rabbitmq/rabbitmq.cfg
+++ b/rabbitmq/rabbitmq.cfg
@@ -1,5 +1,5 @@
 [rabbitmq]
-host = "RABBITMQ_HOST"
-port = "RABBITMQ_PORT"
-username = "RABBITMQ_USERNAME"
-password = "RABBITMQ_PASSWORD"
+host = "localhost"
+port = "localhost"
+username = "guest"
+password = "guest"
