--- a/postgres/postgres.cfg
+++ b/postgres/postgres.cfg
@@ -1,5 +1,4 @@
-#The section name will be appended in Plugin monitor display name
-[dbname]
+[postgres]
 host="localhost"
 port="5432"
 username="None"
