--- a/git_hub/git_hub.cfg
+++ b/git_hub/git_hub.cfg
@@ -1,4 +1,4 @@
-[display_name]
-user_name='user@github'
-personal_access_token='123ascejsfnkl'
-repo_name='Sample_repo1'
+[Repo]
+user_name="UserName"
+personal_access_token="123ascejsfnkl"
+repo_name="Sample_repo1"
