--- a/redis/Redis.cfg
+++ b/redis/Redis.cfg
@@ -2,5 +2,6 @@
 host = "localhost"
 port = "6379"
 password = ""
-dbs = "0"
-
+logs_enabled = "true"
+log_type_name = "Redis Logs"
+log_file_path = "/var/log/redis/redis*.log"
