--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -3,7 +3,7 @@ host = "localhost"
 port = "9200"
 username = "elasticsearch_username"
 password = "elasticsearch_password"
-ssl_option = "False"
+ssl_option = "No"
 cafile = "None"
 logs_enabled = "false"
 log_type_name = "None"
