--- a/tomcat/tomcat.cfg
+++ b/tomcat/tomcat.cfg
@@ -1,8 +1,8 @@
-[Tomcat]
-host = 'localhost'
-port = '8080'
-username = 'user'
-password = 'user'
+[tomcat]
+host = "localhost"
+port = "8080"
+username = "admin"
+password = "admin"
 plugin_version = "1"
 logs_enabled = "true"
 log_type_name = "Tomcat Access Logs"
