--- a/yugabyte_custom_query/yugabyte_custom_query.cfg
+++ b/yugabyte_custom_query/yugabyte_custom_query.cfg
@@ -1,6 +1,6 @@
-[yugabyte]
+[Demo]
 host = "localhost"
 port = "5433"
-username = "user"
-password = "user"
+username = "yugabyte"
+password = "yugabyte"
 db = "demo"
