--- a/DiskFolderMonitoring/DiskFolderMonitoring.cfg
+++ b/DiskFolderMonitoring/DiskFolderMonitoring.cfg
@@ -1,2 +1,2 @@
 ﻿[DiskFolderMonitoring]
-path="C:\Users\Administrator\Documents\DiskFolderMonitoring\kak"
+path="C:\Users\Administrator\Documents\MonitoringFolder"
