--- a/ibm_mq_monitoring/ibm_mq_monitoring.cfg
+++ b/ibm_mq_monitoring/ibm_mq_monitoring.cfg
@@ -1,11 +1,7 @@
-[ibm_mq]
-queue_manager_name ="QMGR"
-channel_name="channel_name"
-queue_name="queue_name"
+[QM1]
+queue_manager_name ="QM1"
+channel_name="DEV.APP.SVRCONN"
 host="localhost"
-port="1415"
-username="ibm_mq_username"
-password ="ibm_mq_password"
-logs_enabled = "False"
-log_type_name = "None"
-log_file_path = "None"
+port="1414"
+username="app"
+password ="plugin"
