--- a/cisco_meraki_wireless/cisco_meraki_wireless.cfg
+++ b/cisco_meraki_wireless/cisco_meraki_wireless.cfg
@@ -1,5 +1,5 @@
 [display_name]
-APIKEY="5075a9e1a4e3bcb5f741cce382f85d84f9e87fa5"
+APIKEY="apikey"
 NETWORKID="L_123456"
 BASEURL="https://api.meraki.com/api/v0"
 JAVA_HOME="/usr/bin"
