--- a/git_hub/git_hub.cfg
+++ b/git_hub/git_hub.cfg
@@ -1,4 +1,4 @@
 [Repo]
 user_name="UserName"
-personal_access_token="123ascejsfnkl"
+personal_access_token='your_personal_access_token'
 repo_name="Sample_repo1"
