--- a/git_lab/git_lab.cfg
+++ b/git_lab/git_lab.cfg
@@ -1,4 +1,4 @@
 [display_name]
 gitlab_url='https://gitlaburl.com'
-personal_access_token='9LdYrk1ju3avs-Xth&jkQyu'
+personal_access_token='your_personal_access_token'
 project_id='1689076'
