--- a/slack/slack_channels_monitoring/slack_channels_monitoring.cfg
+++ b/slack/slack_channels_monitoring/slack_channels_monitoring.cfg
@@ -1,4 +1,4 @@
 [display_name]
-oauth_token = xoxp-1115218301570-1145293321776-1107217637223-sew12saq185c59db496cad2b6655868ac4e
+oauth_token = "Your_OAuth_Token"
 channel_name = agent_team
 channel_type = private
