--- a/DiskFolderMonitoring/DiskFolderMonitoring.cfg
+++ b/DiskFolderMonitoring/DiskFolderMonitoring.cfg
@@ -1,3 +1,3 @@
 [DiskFolderMonitoring]
-path="C:\Users\Site24x7Plugins\Desktop\plugins-development\testingfolder"
+path="C:\Users\Site24x7Plugins\"
 timedifference=2
