--- a/oracle_custom_query_muti_row/oracle_custom_query_muti_row.cfg
+++ b/oracle_custom_query_muti_row/oracle_custom_query_muti_row.cfg
@@ -2,6 +2,6 @@
 hostname="localhost"
 port="1521"
 sid="xe"
-username="site1"
-password="plugin123"
+username="site"
+password="plugin"
 oracle_home="None"
