--- a/hbase/hbase.cfg
+++ b/hbase/hbase.cfg
@@ -1,3 +1,4 @@
 [HBase]
 host="localhost"
 port="16010"
+log_file_path= "/var/log/*hbase*/*.log , /opt/*hbase*/logs/*.log*, /*hbase*/*log*/*.log, C:\\*hbase*\\logs\\*.log*, C:\\Program Files\\*hbase*\\logs\\*.log*"
