--- a/slack/slack_monitoring/slack_monitoring.cfg
+++ b/slack/slack_monitoring/slack_monitoring.cfg
@@ -1,2 +1,5 @@
-[display_name]
-oauth_token = xoxp-1115218301570-1145293321776-1107217637223-sew12saq185c59db496cad2b6655868ac4e
+[global_configurations]
+keys_to_encrypt = oauth_token
+
+[slack_monitoring]
+oauth_token = "Your_OAuth_Token"
