--- a/slack/slack_channels_monitoring/slack_channels_monitoring.cfg
+++ b/slack/slack_channels_monitoring/slack_channels_monitoring.cfg
@@ -1,4 +1,4 @@
 [display_name]
-oauth_token = "Your_OAuth_Token"
-channel_name = agent_team
-channel_type = private
+oauth_token = "xoxp-your-token"
+channel_name = "test"
+channel_type = "private_channel"
