--- a/vpn_check/vpn_check.cfg
+++ b/vpn_check/vpn_check.cfg
@@ -1,4 +1,5 @@
 [vpn_check]
-VPN_HOST='vpn-test'
-VPN_PORT=10443
-URL_BEHIND_VPN='http://intranet-url'
+host='localhost'
+port='943'
+url='https://localhost:943/admin'
+vpn_interface='None'
