--- a/vpn_check/vpn_check.cfg
+++ b/vpn_check/vpn_check.cfg
@@ -2,7 +2,7 @@
 use_agent_python=1
 
 [vpn_check]
-host='localhost'
-port='943'
-url='https://localhost:943/admin'
-vpn_interface='None'
+host=localhost
+port=943
+url=https://localhost:943/admin
+vpn_interface=None
