--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -3,5 +3,5 @@ host = "localhost"
 port = "9200"
 username = "elasticsearch_username"
 password = "elasticsearch_password"
-ssl_option = "No"
+ssl_option = "false"
 cafile = "None"
