--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -1,7 +1,10 @@
+[global_configurations]
+use_agent_python=1
+
 [elasticsearch]
 host="localhost"
 port="9200"
-username="elasticsearch_username"
-password="elasticsearch_password"
+username="None"
+password="None"
 ssl_option="false"
 cafile="None"
