--- a/elasticsearch/elasticsearch.cfg
+++ b/elasticsearch/elasticsearch.cfg
@@ -4,7 +4,7 @@ use_agent_python=1
 [elasticsearch]
 host="localhost"
 port="9200"
-username="None"
-password="None"
+username="elasticsearch_username"
+password="elasticsearch_password"
 ssl_option="false"
 cafile="None"
