--- a/mysql/mysql.cfg
+++ b/mysql/mysql.cfg
@@ -1,8 +1,11 @@
+[global_configurations]
+use_agent_python = 1
+
 [MySQL]
 host=localhost
 port=3306
 username="root"
-password=
+password="none"
 logs_enabled=true
 log_type_name="Mysql General Logs"
 log_file_path="/var/log/mysql/error.log"
