--- a/postgres/postgres.cfg
+++ b/postgres/postgres.cfg
@@ -1,7 +1,9 @@
+[global_configurations]
+use_agent_python=1
+
 [postgres]
 host="localhost"
-port="5432"
-username="None"
-password="None"
-db="postgres"
-plugin_version="1"
+port="5433"
+username="admi"
+password="mypassword"
+db="mydatabase"
