--- a/postgres/postgres.cfg
+++ b/postgres/postgres.cfg
@@ -3,7 +3,7 @@ use_agent_python=1
 
 [postgres]
 host="localhost"
-port="5433"
-username="admi"
-password="mypassword"
-db="mydatabase"
+port="5432"
+username="None"
+password="None"
+db="postgres"
